# LangEvals

./: .gitignore  README.md  pyproject.toml  requirements.txt
long_context/zero_scrolls/: prepare_submission.py  run.sh
long_context/zero_scrolls/qalt/: validation.jsonl
long_context/zero_scrolls/qspr/: validation.jsonl
