[tool.poetry]
  name        = "langevals"
  version     = "0.1.0"
  description = ""
  authors     = ["Alex <30626291+ipruning@users.noreply.github.com>"]
  readme      = "README.md"

[tool.poetry.dependencies]
  python     = ">=3.11.2, <4.0.0"
  anthropic  = "^0.3.11"
  lmql       = "^0.0.6.6"
  matplotlib = "^3.7.2"
  numpy      = "^1.25.2"
  openai     = "^0.27.8"
  tenacity   = "^8.2.3"
  httpx      = { extras = ["socks"], version = "^0.24.1" }
  tqdm       = "^4.66.1"
  pandas     = "^2.1.0"
  tiktoken   = "^0.4.0"

[build-system]
  build-backend = "poetry.core.masonry.api"
  requires      = ["poetry_core>=1.0.0"]
